--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,37 @@
-*
-{
+* {
 	margin: 0;
 	padding: 0;
 }
+
+h1 {
+	color: #FF533D;
+}
+
+/* Nav Bar */
+.navbar{
+	background: #0f1626;
+	margin: 0;
+}
+.logo {
+	width: 5em;
+	height: auto;
+}
+/*Fin Nav Bar */
+
+/* Section Profile */
+.profile {
+	background: #F0EAD6;
+	height: 30em;
+	color: #FFF;
+}
+
+.user-box {
+	margin: 3em 0 3em 0;
+	text-align: center;
+}
+
+.user-img {
+	width: 15em;
+	height: 15em;
+}
+/* Fin Section Profile */
