--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,194 @@
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
-	color: #FF533D;
+  color: #FF533D;
 }
 
 /* Nav Bar */
-.navbar{
-	background: #0f1626;
-	margin: 0;
+
+.navbar {
+  background: #0f1626;
+  margin: 0;
 }
-.logo {
-	width: 5em;
-	height: auto;
+
+.logo-nav {
+  width: 5em;
+  height: auto;
 }
+
 /*Fin Nav Bar */
 
 /* Section Profile */
+
 .profile {
-	background: #F0EAD6;
-	height: 30em;
-	color: #FFF;
+  background-image: url(../img/back.jpg);
+	background-repeat: none;
+	background-size: cover;
+	background-position: bottom;
+  height: 30em;
+  color: #FFF;
 }
 
 .user-box {
-	margin: 3em 0 3em 0;
-	text-align: center;
+  margin: 3em 0 3em 0;
+  text-align: center;
 }
 
 .user-img {
-	width: 15em;
-	height: 15em;
+  width: 15em;
+  height: 15em;
 }
+
 /* Fin Section Profile */
+
+/* Sección de Películas */
+
+.film {
+  background: #FF533D;
+	text-align: center;
+}
+
+.menu-film {
+	margin: 2em;
+  font-size: 2em;
+  background: #0f1626;
+  color: #FFF;
+}
+
+/* Carrusel */
+
+.carousel {
+	margin: 2em
+}
+.carousel-showsixmoveone {
+  .carousel-control {
+    width: 4%;
+    background-image: none;
+    &.left {
+      margin-left: 15px;
+    }
+    &.right {
+      margin-right: 15px;
+    }
+  }
+  .cloneditem-1, .cloneditem-2, .cloneditem-3, .cloneditem-4, .cloneditem-5 {
+    display: none;
+  }
+  .carousel-inner {
+    @media all and (min-width: 768px) {
+      @media (transform-3d), (-webkit-transform-3d) {
+        > .item.active.right, > .item.next {
+          transform: translate3d(33.333%, 0, 0);
+          left: 0;
+        }
+        >.item.active.left, >.item.prev {
+          transform: translate3d(-33.333%, 0, 0);
+          left: 0;
+        }
+        >.item.left, >.item.prev.right, >.item.active {
+          transform: translate3d(0, 0, 0);
+          left: 0;
+        }
+      }
+      >.active.left, >.prev {
+        left: -33.333%;
+      }
+      >.active.right, >.next {
+        left: 33.333%;
+      }
+      >.left, >.prev.right, >.active {
+        left: 0;
+      }
+      .cloneditem-1, .cloneditem-2 {
+        display: block;
+      }
+    }
+    @media all and (min-width: 992px) {
+      @media (transform-3d), (-webkit-transform-3d) {
+        >.item.active.right, >.item.next {
+          transform: translate3d(16.666%, 0, 0);
+          left: 0;
+        }
+        >.item.active.left, >.item.prev {
+          transform: translate3d(-16.666%, 0, 0);
+          left: 0;
+        }
+        >.item.left, >.item.prev.right, >.item.active {
+          transform: translate3d(0, 0, 0);
+          left: 0;
+        }
+      }
+      >.active.left, >.prev {
+        left: -16.666%;
+      }
+      >.active.right, >.next {
+        left: 16.666%;
+      }
+      >.left, >.prev.right, >.active {
+        left: 0;
+      }
+      .cloneditem-3, .cloneditem-4, .cloneditem-5 {
+        display: block;
+      }
+    }
+  }
+}
+
+.container {
+  margin-bottom: 50px;
+}
+
+h2 {
+  margin: 2em 0 1em;
+}
+
+.logo {
+  margin: 20px auto;
+  height: 100px;
+  @media only screen and (min-width: 768px) {
+    margin: 28px;
+    float: left;
+  }
+}
+
+.title {
+  padding: 28px;
+  display: table-cell;
+  position: relative;
+  vertical-align: middle;
+  text-align: center;
+}
+
+/* Fin Carrusel */
+
+/* Fin Sección de Películas */
+
+/* Salas de Cine */
+.cinema {
+	height: 30em;
+}
+.title-cinema {
+	text-align: center;
+}
+/* Fin Salas de Cine */
+
+/* Sección de eventos */
+.events {
+	background: #FF533D;
+}
+
+.thumbnail {
+	margin-top: 3em;
+}
+
+/* Calendario Eventos */
+table {
+		margin-top: 3em;
+    background-color: #FFF;
+    width: 100%;
+}
+/* Fin Calendario Eventos */
+/* Fin Sección de eventos */
