--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
+
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -194,3 +198,542 @@ table {
 }
 /* Fin Calendario Eventos */
 /* Fin Sección de eventos */
+
+/* Section Profile */
+.profile {
+	background: #F0EAD6;
+	height: 30em;
+	color: #FFF;
+}
+
+.user-box {
+	margin: 3em 0 3em 0;
+	text-align: center;
+}
+
+.user-img {
+	width: 15em;
+	height: 15em;
+}
+/* Fin Section Profile */
+
+/*------------------------------------*/
+/*         SECCION PRESENTATION         */
+/*------------------------------------*/
+.presentation 
+{
+  background-image: url(../img/back.jpg);
+  background-repeat: none;
+  background-size: cover;
+  background-position: bottom;
+  height: 30em;
+/*  color: #FFF;*/
+  margin-top: 4em;
+}
+
+.summary
+{
+  color: #0f1626;
+  font-size: 2em;
+  text-align: center;
+
+}
+
+/*------------------------------------*/
+/*         SECCION TENDENCIAS         */
+/*------------------------------------*/
+/*Estilo seccion tendencias*/
+.tendency
+{
+	background-color: #FF533D;
+	padding: 3em 6em;
+}
+
+/*Estilo titulo tendencias*/
+.title-ten
+{
+	color: #F0EAD6;
+	margin-bottom: 1.5em;
+}
+
+/*Estilo seccion cines*/
+.cinemas
+{
+	background-color: #F0EAD6;
+	padding: 3em;
+}
+
+
+/*------------------------------------*/
+/*            SECCION CINES           */
+/*------------------------------------*/
+/*Estilo titulo cines*/
+.title-cinemas
+{
+	color: #FF533D;
+	margin-bottom: 1.5em;
+	margin-left: 1.5em;
+}
+
+/*Estilos nombre de los cines*/
+.title-small-cinema
+{
+	color: #FF533D;
+	text-align: center;
+}
+
+/*-------------------------------------*/
+/*                FOOTER               */
+/*-------------------------------------*/
+/*-----Estilo footer-----*/
+footer
+{
+	background-color: #0f1626;
+	color: #FF533D;
+	height: 5.5em;
+	padding-top: 2em;
+	width: 100%;
+	text-align: center;
+} 
+
+
+
+/*------------------------------------*/
+/*  ESTILO MODAL DE REGISTRO Y LOGIN  */
+/*------------------------------------*/
+
+
+/*-----------------------------------*/
+/*      ESTILO CARS DE LOS CINES     */
+/*-----------------------------------*/
+/*estilo cuadro*/
+.img-biografo
+{
+  z-index: 2;
+  height: 8em;
+  width: 10.5em;
+/*  position: absolute;*/
+}
+
+/*estilo mapa*/
+.map1
+{
+/*  position: relative;*/
+  margin-top: 1.5em; 
+  margin-left: 0.8em;
+  z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 450px !important;
+    height: 545px !important;
+    overflow: hidden;
+    padding: 15px 10px;
+  }
+  
+ /* .container .about-movie {
+    display: inline-block !important;
+  }*/
+
+  .container .about-movie p {
+    width: 49% !important;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+.movie-card {
+  font: 14px/22px "Lato", Arial, sans-serif;
+  color: #A9A8A3;
+  padding: 40px 0;
+}
+
+.movie-card .container {
+  margin: 0 auto;
+  width: 450px;
+  height: 640px;
+  background: #F0F0ED;
+  border-radius: 5px;
+  position: relative;
+}
+
+/*.movie-card .container a img {
+  max-width: 500px;
+  max-height: 250px;
+}
+*/
+/*.movie-card .container .back-cover {
+  height: 342px;
+  margin: 0;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+*/
+/*.movie-card .container .back-cover:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url("https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6658.797647377903!2d-70.64449840326202!3d-33.4389144699488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c599482afe51%3A0x995c385d969e5069!2sJos%C3%A9+Victorino+Lastarria+181%2C+Santiago%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1515541260734" width="200" height="200" frameborder="0" style="border:0" allowfullscreen);
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transform: skewY(-3.2deg);
+  transform-origin: 0 0;
+}*/
+
+/*.movie-card .container .cover 
+{
+  position: absolute;
+  height: 30px;
+  top: 160px;
+  left: 40px;
+  z-index: 2;
+}*/
+
+/*.movie-card .container .cover:hover 
+{
+  opacity: 0.9;
+  cursor: pointer;
+}*/
+
+/*.movie-card .container .details 
+{
+  padding: 238px 0 0 268px;
+}
+*/
+/*Estilo titulo del cine en el modal*/
+.movie-card .container .details .title1 {
+  color: #000;
+  font-size: 24px;
+  margin-bottom: 16px;
+  position: relative;
+  text-align: center;
+  margin: 1em 2em;
+}
+
+/*.movie-card .container .details .title1 span {
+  position: absolute;
+  top: 3px;
+  margin-left: 12px;
+  background: #C4AF3D;
+  border-radius: 5px;
+  color: #544C21;
+  font-size: 14px;
+  padding: 0px 4px;
+}*/
+
+/*.movie-card .container .title2 {
+  color: white;
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}*/
+
+/*.movie-card .container .likes {
+  margin-left: 30px;
+  display: inline-block;
+  padding-bottom: 19px;
+}*/
+
+/*Estilo corazon del like*/
+.movie-card .container .likes:before {
+  content: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/icon_like.png");
+  position: relative;
+  top: 2px;
+  padding-right: 7px;
+}
+
+/*Estilo parrafos con direccion tel y horario*/
+.movie-card .container .about-movie {
+  display: inline-flex;
+  bottom: 0px;
+  height: 200px;
+  font-size: 16px;
+  line-height: 26px;
+  color: #B1B0AC;
+}
+
+/*estilo columna 1*/
+.movie-card .container .about-movie .colum-one {
+  padding-left: 50px;
+  padding-top: 5px;
+  width: 220px;
+  float: left;
+  text-align: left;
+}
+
+/*.movie-card .container .about-movie .colum-one .colum-catogary {
+  text-align: left;
+  margin-left: -20px;
+}*/
+
+/*.movie-card .container .about-movie .colum-one .colum-catogary span {
+  padding: 1px 8px;
+  font-size: 14px;
+  background: white;
+  border-radius: 10px;
+  margin-left: 2px;
+}*/
+
+/*.movie-card .container .about-movie .colum-one .colum-catogary span:hover {
+  background: #999;
+  color: white;
+  cursor: pointer;
+}*/
+
+/*estilo segunda columna*/
+.movie-card .container .about-movie .colum-second {
+  padding-left: 50px;
+  padding-top: 20px;
+  margin-left: -39px;
+  width: 230px;
+  float: left;
+}
+
+/*.movie-card .container .about-movie .colum-second p {
+  width: 76%;
+}*/
+
+/*.movie-card .container .about-movie .colum-second p a {
+  text-decoration: none;
+  color: #6e6ed8;
+}*/
+
+/*start rate system style */
+fieldset {
+  border-color: #fff;
+  border-style: none;
+}
+
+.starRating {
+  margin-left: -22px;
+}
+
+.starRating > * {
+  float: left;
+}
+
+/* 
+some  animtion   do  when  load window 
+
+*/
+@-webkit-keyframes pulse {
+  50% {
+    color: #5e5e5e;
+    text-shadow: 0 0 15px #777777;
+  }
+}
+@keyframes pulse {
+  50% {
+    color: #5e5e5e;
+    text-shadow: 0 0 15px #777777;
+  }
+}
+.starRating label {
+  height: 40px;
+  width: 15%;
+  position: relative;
+  cursor: pointer;
+}
+
+.starRatinglabel:nth-of-type(5):after {
+  -webkit-animation-delay: 0.25s;
+  animation-delay: 0.25s;
+}
+
+.starRating label:nth-of-type(4):after {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+
+.starRating label:nth-of-type(3):after {
+  -webkit-animation-delay: 0.15s;
+  animation-delay: 0.15s;
+}
+
+.starRating label:nth-of-type(2):after {
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
+}
+
+.starRating label:nth-of-type(1):after {
+  -webkit-animation-delay: 0.05s;
+  animation-delay: 0.05s;
+}
+
+.starRating label:after {
+  -webkit-transition: all 0.4s ease-out;
+  transition: all 0.4s ease-out;
+  position: absolute;
+  content: "☆";
+  color: #444;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 40px;
+  -webkit-animation: 1s pulse ease;
+  animation: 1s pulse ease;
+}
+
+.starRating label:hover:after {
+  color: #5e5e5e;
+  text-shadow: 0 0 15px #5e5e5e;
+}
+
+.starRating input {
+  display: none;
+}
+
+/*  " +" This will only work on IE7 or above. In IE6, the style will not be applied to any elements  so used "~ " this  meaning select  any element  after the input radio button 
+show 
+
+ http://jsfiddle.net/7c05m7tv/ 
+ https://css-tricks.com/almanac/selectors/a/adjacent-sibling/
+ http://jsfiddle.net/7c05m7tv/70/
+
+*/
+.starRating input:checked + label:after,
+.starRating input:checked ~ label:after {
+  content: "★";
+  color: #F9BF3B;
+  text-shadow: 0 0 20px #F9BF3B;
+}
+
+/*.myName {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  padding: 5px 15px;
+  color: #FFF;
+  font-family: arial;
+  width: 30%;
+}*/
+
+/*.myName a {
+  color: #FFF;
+  text-decoration: none;
+  font-size: 1.3em;
+  font-weight: normal;
+  float: left;
+  margin-top: 3%;
+  margin-left: 3%;
+}*/
+
+/*.myName a:hover {
+  text-decoration: underline;
+}*/
+
+/*.myName img {
+  width: 50px;
+  border-radius: 50%;
+  float: left;
+}*/
+
+/*MODAL INICIAR REGISTRO*/
+
+.panel-login {
+  border-color: #ccc;
+  -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+}
+.panel-login>.panel-heading {
+  color: #00415d;
+  background-color: #fff;
+  border-color: #fff;
+  text-align:center;
+}
+.panel-login>.panel-heading a{
+  text-decoration: none;
+  color: #666;
+  font-weight: bold;
+  font-size: 15px;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+}
+.panel-login>.panel-heading a.active{
+  color: #029f5b;
+  font-size: 18px;
+}
+.panel-login>.panel-heading hr{
+  margin-top: 10px;
+  margin-bottom: 0px;
+  clear: both;
+  border: 0;
+  height: 1px;
+  background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));
+  background-image: -moz-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
+  background-image: -ms-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
+  background-image: -o-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
+}
+.panel-login input[type="text"],.panel-login input[type="email"],.panel-login input[type="password"] {
+  height: 45px;
+  border: 1px solid #ddd;
+  font-size: 16px;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+}
+.panel-login input:hover,
+.panel-login input:focus {
+  outline:none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  border-color: #ccc;
+}
+.btn-login {
+  background-color: #59B2E0;
+  outline: none;
+  color: #fff;
+  font-size: 14px;
+  height: auto;
+  font-weight: normal;
+  padding: 14px 0;
+  text-transform: uppercase;
+  border-color: #59B2E6;
+}
+.btn-login:hover,
+.btn-login:focus {
+  color: #fff;
+  background-color: #53A3CD;
+  border-color: #53A3CD;
+}
+.forgot-password {
+  text-decoration: underline;
+  color: #888;
+}
+.forgot-password:hover,
+.forgot-password:focus {
+  text-decoration: underline;
+  color: #666;
+}
+
+.btn-register {
+  background-color: #1CB94E;
+  outline: none;
+  color: #fff;
+  font-size: 14px;
+  height: auto;
+  font-weight: normal;
+  padding: 14px 0;
+  text-transform: uppercase;
+  border-color: #1CB94A;
+}
+.btn-register:hover,
+.btn-register:focus {
+  color: #fff;
+  background-color: #1CA347;
+  border-color: #1CA347;
+}
+
