--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ table {
 
 
 /*------------------------------------*/
-/*         SECCION PRESENTATION         */
+/*         SECCION PRESENTATION       */
 /*------------------------------------*/
 .presentation 
 {
@@ -224,7 +224,13 @@ table {
   color: #0f1626;
   font-size: 2em;
   text-align: center;
+}
 
+.desc
+{
+  color: ;
+  font-size: 1.5em;
+  padding: 3em 5em;
 }
 
 /*------------------------------------*/
@@ -241,7 +247,15 @@ table {
 .title-ten
 {
 	color: #F0EAD6;
-	margin-bottom: 1.5em;
+/*	margin-bottom: 1.5em;*/
+}
+
+.menu-ten 
+{
+  margin-top: 1em;
+  font-size: 2em;
+  background: #0f1626;
+  color: #FFF;
 }
 
 /*Estilo seccion cines*/
@@ -270,6 +284,7 @@ table {
 	text-align: center;
 }
 
+
 /*-------------------------------------*/
 /*                FOOTER               */
 /*-------------------------------------*/
@@ -286,116 +301,61 @@ footer
 
 
 
-/*------------------------------------*/
-/*  ESTILO MODAL DE REGISTRO Y LOGIN  */
-/*------------------------------------*/
-
-
 /*-----------------------------------*/
 /*      ESTILO CARS DE LOS CINES     */
 /*-----------------------------------*/
-/*estilo cuadro*/
-.img-biografo
+
+.modal-title-cinemas
 {
-  z-index: 2;
-  height: 8em;
-  width: 10.5em;
-/*  position: absolute;*/
+  text-align: center;
 }
 
 /*estilo mapa*/
-.map1
+.map
 {
 /*  position: relative;*/
-  margin-top: 1.5em; 
-  margin-left: 0.8em;
-  z-index: 1;
+  width: 400px;
+  height: 200px; 
+  margin-top: 0.3em; 
+/*  margin-left: 1em;*/
+  margin-bottom: 0.8em;
+  text-align: center;
+/*  border: 2px solid #FF533D;*/
+  border-radius: 0.7em;
+ /* z-index: 1;*/
 }
+
 
 @media (max-width: 768px) {
   .container {
-    width: 450px !important;
-    height: 545px !important;
+    width: 430px !important;
+    height: 450px !important;
     overflow: hidden;
-    padding: 15px 10px;
   }
-  
- /* .container .about-movie {
-    display: inline-block !important;
-  }*/
 
-  .container .about-movie p {
-    width: 49% !important;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
 }
 
 .movie-card {
   font: 14px/22px "Lato", Arial, sans-serif;
   color: #A9A8A3;
   padding: 40px 0;
+  font-size: 2em;
 }
 
 .movie-card .container {
-  margin: 0 auto;
-  width: 450px;
-  height: 640px;
+/*  margin: 0 auto;*/
+  width: 500px;
+  height: 450px;
   background: #F0F0ED;
   border-radius: 5px;
-  position: relative;
+  text-align: center;
 }
 
-/*.movie-card .container a img {
-  max-width: 500px;
-  max-height: 250px;
-}
-*/
-/*.movie-card .container .back-cover {
-  height: 342px;
-  margin: 0;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-}
-*/
-/*.movie-card .container .back-cover:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: url("https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6658.797647377903!2d-70.64449840326202!3d-33.4389144699488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c599482afe51%3A0x995c385d969e5069!2sJos%C3%A9+Victorino+Lastarria+181%2C+Santiago%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1515541260734" width="200" height="200" frameborder="0" style="border:0" allowfullscreen);
-  z-index: -1;
-  background-repeat: no-repeat;
-  background-size: cover;
-  transform: skewY(-3.2deg);
-  transform-origin: 0 0;
-}*/
-
-/*.movie-card .container .cover 
+.sec
 {
-  position: absolute;
-  height: 30px;
-  top: 160px;
-  left: 40px;
-  z-index: 2;
-}*/
-
-/*.movie-card .container .cover:hover 
-{
-  opacity: 0.9;
-  cursor: pointer;
-}*/
-
-/*.movie-card .container .details 
-{
-  padding: 238px 0 0 268px;
+  text-align: left;
 }
-*/
+
 /*Estilo titulo del cine en el modal*/
 .movie-card .container .details .title1 {
   color: #000;
@@ -405,30 +365,6 @@ footer
   text-align: center;
   margin: 1em 2em;
 }
-
-/*.movie-card .container .details .title1 span {
-  position: absolute;
-  top: 3px;
-  margin-left: 12px;
-  background: #C4AF3D;
-  border-radius: 5px;
-  color: #544C21;
-  font-size: 14px;
-  padding: 0px 4px;
-}*/
-
-/*.movie-card .container .title2 {
-  color: white;
-  font-size: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}*/
-
-/*.movie-card .container .likes {
-  margin-left: 30px;
-  display: inline-block;
-  padding-bottom: 19px;
-}*/
 
 /*Estilo corazon del like*/
 .movie-card .container .likes:before {
@@ -457,25 +393,6 @@ footer
   text-align: left;
 }
 
-/*.movie-card .container .about-movie .colum-one .colum-catogary {
-  text-align: left;
-  margin-left: -20px;
-}*/
-
-/*.movie-card .container .about-movie .colum-one .colum-catogary span {
-  padding: 1px 8px;
-  font-size: 14px;
-  background: white;
-  border-radius: 10px;
-  margin-left: 2px;
-}*/
-
-/*.movie-card .container .about-movie .colum-one .colum-catogary span:hover {
-  background: #999;
-  color: white;
-  cursor: pointer;
-}*/
-
 /*estilo segunda columna*/
 .movie-card .container .about-movie .colum-second {
   padding-left: 50px;
@@ -484,15 +401,6 @@ footer
   width: 230px;
   float: left;
 }
-
-/*.movie-card .container .about-movie .colum-second p {
-  width: 76%;
-}*/
-
-/*.movie-card .container .about-movie .colum-second p a {
-  text-decoration: none;
-  color: #6e6ed8;
-}*/
 
 /*start rate system style */
 fieldset {
@@ -581,14 +489,7 @@ some  animtion   do  when  load window
   display: none;
 }
 
-/*  " +" This will only work on IE7 or above. In IE6, the style will not be applied to any elements  so used "~ " this  meaning select  any element  after the input radio button 
-show 
 
- http://jsfiddle.net/7c05m7tv/ 
- https://css-tricks.com/almanac/selectors/a/adjacent-sibling/
- http://jsfiddle.net/7c05m7tv/70/
-
-*/
 .starRating input:checked + label:after,
 .starRating input:checked ~ label:after {
   content: "★";
@@ -596,38 +497,10 @@ show
   text-shadow: 0 0 20px #F9BF3B;
 }
 
-/*.myName {
-  position: absolute;
-  top: 1em;
-  left: 1em;
-  padding: 5px 15px;
-  color: #FFF;
-  font-family: arial;
-  width: 30%;
-}*/
 
-/*.myName a {
-  color: #FFF;
-  text-decoration: none;
-  font-size: 1.3em;
-  font-weight: normal;
-  float: left;
-  margin-top: 3%;
-  margin-left: 3%;
-}*/
-
-/*.myName a:hover {
-  text-decoration: underline;
-}*/
-
-/*.myName img {
-  width: 50px;
-  border-radius: 50%;
-  float: left;
-}*/
-
-/*MODAL INICIAR REGISTRO*/
-
+/*------------------------------------*/
+/*  ESTILO MODAL DE REGISTRO Y LOGIN  */
+/*------------------------------------*/
 .panel-login {
   border-color: #ccc;
   -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
