--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,9 +307,7 @@ table {
 /* Fin Sección de eventos */
 
 /*------------------------------------*/
-
 /*         SECCION PRESENTATION       */
-
 /*------------------------------------*/
 
 .presentation {
@@ -335,9 +333,7 @@ table {
 }
 
 /*------------------------------------*/
-
 /*         SECCION TENDENCIAS         */
-
 /*------------------------------------*/
 
 /*Estilo seccion tendencias*/
@@ -368,11 +364,28 @@ table {
   padding: 3em;
 }
 
+/*------------------------------------*/
+/*            SECCION CINES           */
+/*------------------------------------*/
+
+/*Estilo titulo cines*/
+
+.title-cinemas {
+  color: #FF533D;
+  margin-bottom: 1.5em;
+  margin-left: 1.5em;
+}
+
+/*Estilos nombre de los cines*/
+
+
+.title-small-cinema {
+  color: #FF533D;
+  text-align: center;
+}
 
 /*-----------------------------------*/
-
 /*      ESTILO CARS DE LOS CINES     */
-
 /*-----------------------------------*/
 
 .modal-title-cinemas {
@@ -394,36 +407,62 @@ table {
   /* z-index: 1;*/
 }
 
+
 @media (max-width: 768px) {
   .container {
-    width: 430px !important;
-    height: 450px !important;
+    width: 90% !important;
+    height: auto !important;
     overflow: hidden;
+    width: 100%;
   }
+
+  .map {
+  /*  position: relative;*/
+  width: 85%;
+  height: 200px;
+  margin-top: 0.3em;
+  /*  margin-left: 1em;*/
+  margin-bottom: 0.8em;
+  text-align: center;
+  /*  border: 2px solid #FF533D;*/
+  border-radius: 0.7em;
+  /* z-index: 1;*/
+  }
+
+  .heart
+  {
+    text-align: center;
+
+  }
+
+  .star
+  {
+    text-align: center;
+
+  }
+
 }
 
+
 .movie-card {
-  font: 14px/22px "Lato", Arial, sans-serif;
+  /*font-family: :"Lato", Arial, sans-serif;*/
   color: #A9A8A3;
-  padding: 40px 0;
-  font-size: 2em;
+/*  padding: 40px 0;*/
+  /*font-size: 2em;*/
+  
 }
 
 .movie-card .container {
   /*  margin: 0 auto;*/
   width: 500px;
-  height: 450px;
+  height: auto;
   background: #F0F0ED;
   border-radius: 5px;
   text-align: center;
-}
-
-.sec {
-  text-align: left;
+  width: 90%;
 }
 
 /*Estilo titulo del cine en el modal*/
-
 .movie-card .container .details .title1 {
   color: #000;
   font-size: 24px;
@@ -433,14 +472,18 @@ table {
   margin: 1em 2em;
 }
 
-/*Estilo corazon del like*/
 
-.movie-card .container .likes:before {
+/*Estilo corazon del like*/
+.glyphicon-heart:before {
+    content: "\e005";
+    color: indianred;
+}
+
+/*.movie-card .container .likes:before {
   content: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/icon_like.png");
   position: relative;
   top: 2px;
-  padding-right: 7px;
-}
+}*/
 
 /*Estilo parrafos con direccion tel y horario*/
 
@@ -453,44 +496,15 @@ table {
   color: #B1B0AC;
 }
 
-/*estilo columna 1*/
-
-.movie-card .container .about-movie .colum-one {
-  padding-left: 50px;
-  padding-top: 5px;
-  width: 220px;
-  float: left;
-  text-align: left;
-}
-
-/*estilo segunda columna*/
-
-.movie-card .container .about-movie .colum-second {
-  padding-left: 50px;
-  padding-top: 20px;
-  margin-left: -39px;
-  width: 230px;
-  float: left;
-}
 
 /*start rate system style */
-
 fieldset {
   border-color: #fff;
   border-style: none;
 }
 
-.starRating {
-  margin-left: -22px;
-}
-
-.starRating>* {
-  float: left;
-}
-
 /*
  some  animtion   do  when  load window
-
  */
 
 @-webkit-keyframes pulse {
@@ -507,9 +521,40 @@ fieldset {
   }
 }
 
+.star
+{
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.heart
+{
+  text-align: center;
+  color: red;
+}
+
+.info
+{
+  padding: 1em;
+  font-size: 1.3em;
+  text-align: left;
+  padding: 0.7em 2em;
+}
+
+.info .especialLink
+{
+  text-align: center;
+}
+
+.especialLink
+{
+  text-align: center!important;
+}
+
+
 .starRating label {
-  height: 40px;
-  width: 15%;
+  height: 50px;
+  width: 10%;
   position: relative;
   cursor: pointer;
 }
@@ -548,7 +593,6 @@ fieldset {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
   text-align: center;
   font-size: 40px;
   -webkit-animation: 1s pulse ease;
@@ -570,10 +614,10 @@ fieldset {
   text-shadow: 0 0 20px #F9BF3B;
 }
 
+
+
 /*------------------------------------*/
-
 /*  ESTILO MODAL DE REGISTRO Y LOGIN  */
-
 /*------------------------------------*/
 
 .panel-login {
@@ -727,3 +771,4 @@ fieldset {
 #social-em:hover {
   color: #f39c12;
 }
+
