--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ h1 {
 
 .film {
   text-align: center;
+  background: #e6e6e6;
   height: 70vh;
 }
 
@@ -282,11 +283,17 @@ h2 {
 .menu-events {
   margin-top: 2.5em;
   font-size: 2em;
-  background: #0f1626;
-  color: #FFF;
+  background: rgba(249,231,159,0.63);
+  background: -moz-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(249,231,159,0.63)), color-stop(94%, rgba(249,231,159,0.63)), color-stop(99%, rgba(249,231,159,0.63)), color-stop(100%, rgba(249,231,159,0.45)));
+  background: -webkit-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
+  background: -o-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
+  color: rgb(167, 28, 35)  ;
   border-radius: 0.2em;
-  border-color: #0f1626;
-  font-family: 'Oswald', sans-serif;
+  border: none;
+  widows: ;
+  font-family: 'Dancing Script', cursive;
 }
 
 .thumbnail a {
@@ -311,11 +318,11 @@ table {
 /*------------------------------------*/
 
 .presentation {
-  background-image: url(../img/back.jpg);
+  background-image: url(../img/foto-principal.png);
   background-repeat: none;
   background-size: cover;
-  background-position: bottom;
-  height: 30em;
+  background-position: 80% 45%;
+  height: 80vh;
   /*  color: #FFF;*/
   margin-top: 4em;
 }
@@ -326,10 +333,29 @@ table {
   text-align: center;
 }
 
-.desc {
-  color: ;
-  font-size: 1.5em;
+.user-box {
+  background: rgba(249,231,159,0.63);
+  background: -moz-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(249,231,159,0.63)), color-stop(94%, rgba(249,231,159,0.63)), color-stop(99%, rgba(249,231,159,0.63)), color-stop(100%, rgba(249,231,159,0.45)));
+  background: -webkit-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
+  background: -o-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
   padding: 3em 5em;
+  width: 30%;
+  height: 60vh;
+  margin-top: 5%;
+  margin-left: 10%;
+  border-radius: 15px;
+}
+
+.user-box h1{
+  color: rgb(167, 28, 35)  ;
+  font-size: 60px;
+  margin-top: -3%;
+}
+
+.desc cite{
+  font-family: 'Atma', cursive;
 }
 
 /*------------------------------------*/
