--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
   box-sizing: border-box;
 }
 
+
+
 h1 {
   color: #7E0B0B;
 
@@ -15,9 +17,13 @@ a {
   color: #7E0B0B;
 }
 
-.btn-primary {
+.thumbnail .btn-primary {
   background: #FFF;
   border-color: #8a2020;
+}
+
+.btn-primary {
+  background-color: #8a2020;
 }
 
 .btn-primary:hover {
@@ -143,7 +149,7 @@ a {
 
 .menu-film {
   margin-top: 10%;
-  width: 20%;
+  width: 7em;
   background: rgba(249,231,159,0.63);
   background: -moz-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
   background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(249,231,159,0.63)), color-stop(94%, rgba(249,231,159,0.63)), color-stop(99%, rgba(249,231,159,0.63)), color-stop(100%, rgba(249,231,159,0.45)));
@@ -309,6 +315,10 @@ h2 {
   height: 90vh;
 }
 
+.bs-example {
+  margin-bottom: 5em;
+}
+
 .thumbnail {
   background: rgba(249, 231, 159, 0.63);
   background: -moz-linear-gradient(-45deg, rgba(249, 231, 159, 0.63) 0%, rgba(249, 231, 159, 0.63) 94%, rgba(249, 231, 159, 0.63) 99%, rgba(249, 231, 159, 0.45) 100%);
@@ -360,7 +370,6 @@ table {
   background-size: cover;
   background-position: 80% 45%;
   height: 80vh;
-  /*  color: #FFF;*/
   margin-top: 4em;
 }
 
@@ -370,30 +379,30 @@ table {
   text-align: center;
 }
 
-#page1 {
+.present-box {
   background: rgba(249,231,159,0.63);
   background: -moz-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
   background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(249,231,159,0.63)), color-stop(94%, rgba(249,231,159,0.63)), color-stop(99%, rgba(249,231,159,0.63)), color-stop(100%, rgba(249,231,159,0.45)));
   background: -webkit-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
   background: -o-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
   background: -ms-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
-  padding: 3em 5em;
-  width: 30%;
-  height: 60vh;
-  margin-top: 5%;
-  margin-left: 10%;
   border-radius: 15px;
+  margin: 10% 5% 5% 5%;
+  height: 50%;
+  text-align: center;
 }
 
-.user-box h1{
-  color: rgb(167, 28, 35)  ;
-  font-size: 60px;
-  margin-top: 2px;
+.logo-pres {
+  margin-bottom: 1em;
+  width: 40%;
+  height: auto;
 }
 
-#text1 cite{
+#text1 p{
   font-family: 'Atma', cursive;
   font-size: 20px;
+  text-align: center;
+  font-weight: bolder;
 }
 
 /*------------------------------------*/
@@ -425,7 +434,7 @@ table {
   background: -webkit-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
   background: -o-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
   background: -ms-linear-gradient(-45deg, rgba(249,231,159,0.63) 0%, rgba(249,231,159,0.63) 94%, rgba(249,231,159,0.63) 99%, rgba(249,231,159,0.45) 100%);
-  width: 17%;
+  width: 7em;
   font-size: 30px;
   color: rgb(167, 28, 35)  ;
   border-radius: 0.2em;
@@ -664,7 +673,7 @@ fieldset {
 }
 
 .panel-login>.panel-heading {
-  color: #00415d;
+  color: #7e0b0b;
   background-color: #fff;
   border-color: #fff;
   text-align: center;
@@ -681,7 +690,7 @@ fieldset {
 }
 
 .panel-login>.panel-heading a.active {
-  color: #029f5b;
+  color: #7e0b0b;
   font-size: 18px;
 }
 
@@ -715,7 +724,7 @@ fieldset {
 }
 
 .btn-login {
-  background-color: #59B2E0;
+  background-color: #7e0b0b;
   outline: none;
   color: #fff;
   font-size: 14px;
@@ -723,13 +732,13 @@ fieldset {
   font-weight: normal;
   padding: 14px 0;
   text-transform: uppercase;
-  border-color: #59B2E6;
+  border-color: #7e0b0b;
 }
 
 .btn-login:hover, .btn-login:focus {
   color: #fff;
-  background-color: #53A3CD;
-  border-color: #53A3CD;
+  background-color: #3d0404;
+  border-color: #3d0404;
 }
 
 .forgot-password {
@@ -743,7 +752,7 @@ fieldset {
 }
 
 .btn-register {
-  background-color: #1CB94E;
+  background-color: #7e0b0b;
   outline: none;
   color: #fff;
   font-size: 14px;
@@ -751,22 +760,25 @@ fieldset {
   font-weight: normal;
   padding: 14px 0;
   text-transform: uppercase;
-  border-color: #1CB94A;
+  border-color: #7e0b0b;
 }
 
 .btn-register:hover, .btn-register:focus {
   color: #fff;
-  background-color: #1CA347;
-  border-color: #1CA347;
+  background-color: #3d0404;
+  border-color: #3d0404;
 }
 
 /* Footer */
 
 .footer {
   background: #7E0B0B;
-  ;
+  width: 100%;
   height: 5em;
   padding: 1em;
+  position: fixed;
+  left:0px;
+  bottom:0px;
 }
 
 .social:hover {
